[package]
name = "apod_wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12", features = ["json", "blocking"]}
serde_json = {version = "1.0.87"}
wallpaper = {version = "3.2.0", features = ["from_url"]}
